--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Pivots.dev - Curated list of companies that had successful pivots"
+      content="Curated list of companies that had successful pivots"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -29,7 +29,10 @@
     </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript
+      >You might or might not need to enable JavaScript to read this
+      webpage.</noscript
+    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
