Add missing logo and remove noscript tag

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#4299e1" />
     <meta
       name="description"
       content="Curated list of companies that had successful pivots"
@@ -29,10 +29,6 @@
     </title>
   </head>
   <body>
-    <noscript
-      >You might or might not need to enable JavaScript to read this
-      webpage.</noscript
-    >
     <div id="root"></div>
     <!--
       This HTML file is a template.
